updated to JUnit 5
Signed-off-by: Konstantin Läufer <laufer@cs.luc.edu>