@@ -1,18 +1,13 @@
 package hw;
 
-import static org.junit.Assert.assertArrayEquals;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
-
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
-import java.util.Iterator;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Queue;
-import org.junit.Test;
+
+import org.junit.jupiter.api.Test;
+import static org.junit.jupiter.api.Assertions.*;
 
 public class TestSlidingQueue {
 
@@ -22,14 +17,14 @@ public class TestSlidingQueue {
     //        input = ...
     //        result = sut.f(input);
     //        assertSomething(result);
-    final ArrayList<String> input = new ArrayList<>();
+    final var input = Collections.<String>emptyList();
     Collections.sort(input);
     assertTrue(input.isEmpty());
   }
 
   @Test
   public void testIteratorNonempty() {
-    final Iterator<String> input = Arrays.asList("hello", "world", "what", "up").iterator();
+    final var input = List.of("hello", "world", "what", "up").iterator();
     assertTrue(input.hasNext());
     assertEquals("hello", input.next());
     assertTrue(input.hasNext());
@@ -43,14 +38,14 @@ public class TestSlidingQueue {
 
   @Test
   public void testIteratorEmpty() {
-    final Iterator<String> input = Collections.emptyIterator();
+    final var input = Collections.<String>emptyIterator();
     assertFalse(input.hasNext());
   }
 
   @Test
   public void testSlidingWindowEmpty() {
-    final SlidingQueue sut = new SlidingQueue(3);
-    final Iterator<String> input = Collections.emptyIterator();
+    final var sut = new SlidingQueue(3);
+    final var input = Collections.<String>emptyIterator();
     // an observer instance that sends updates to a buffer (list) for testing
     final var outputToList = new OutputToList();
     sut.process(input, outputToList);
@@ -60,16 +55,16 @@ public class TestSlidingQueue {
 
   @Test
   public void testSlidingWindowNonempty() {
-    final SlidingQueue sut = new SlidingQueue(3);
-    final Iterator<String> input = Arrays.asList("asdf", "qwer", "oiui", "zxcv").iterator();
+    final var sut = new SlidingQueue(3);
+    final var input = List.of("asdf", "qwer", "oiui", "zxcv").iterator();
     final var outputToList = new OutputToList();
     sut.process(input, outputToList);
     final var result = outputToList.result;
     assertEquals(4, result.size());
-    assertArrayEquals(new String[] {"asdf"}, result.get(0).toArray());
-    assertArrayEquals(new String[] {"asdf", "qwer"}, result.get(1).toArray());
-    assertArrayEquals(new String[] {"asdf", "qwer", "oiui"}, result.get(2).toArray());
-    assertArrayEquals(new String[] {"qwer", "oiui", "zxcv"}, result.get(3).toArray());
+    assertEquals(List.of("asdf"), result.get(0));
+    assertEquals(List.of("asdf", "qwer"), result.get(1));
+    assertEquals(List.of("asdf", "qwer", "oiui"), result.get(2));
+    assertEquals(List.of("qwer", "oiui", "zxcv"), result.get(3));
   }
 
   private static class OutputToList implements OutputObserver {
@@ -78,9 +73,8 @@ public class TestSlidingQueue {
 
     @Override
     public void accept(final Queue<String> value) {
-      final Queue<String> snapshot = new LinkedList<>(value);
+      final var snapshot = new LinkedList<>(value);
       result.add(snapshot);
     }
-    ;
   }
 }
